# DApp

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: database.cpp.029F70A6662CC321.idx  database.h.7D0BB1DBA1B793D6.idx  detail_screen.h.93B125173910DAE7.idx  home_screen.h.80F64E1A8D0E79F2.idx  main.cpp.5C52C970D0D39FDE.idx  main_window.cpp.14B090ED60A99019.idx  main_window.h.EB4038C48D688504.idx  models.h.597FA6CB11AB7917.idx  order_form_dialog.cpp.4DCF1650915FACF6.idx
logistics-app/: CMakeLists.txt
logistics-app/.cache/clangd/index/: detail_screen.cpp.A7495C2D1E2A27C7.idx  home_screen.cpp.502BE1AC3A9DE1B7.idx  order_form_dialog.h.62D2A9FEC29CEEEB.idx
logistics-app/resources/: migrations.qrc
logistics-app/src/: database.cpp  database.h  detail_screen.cpp  home_screen.cpp  home_screen.h  main_window.h  order_form_dialog.h
resources/: migrations.qrc
resources/migrations/: 001_init.sql  002_indexes.sql  003_users.sql
src/: database.cpp  database.h  detail_screen.h  login_screen.cpp  login_screen.h  main.cpp  main_window.cpp  main_window.h  models.h  order_form_dialog.cpp
